Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>Clash Of The Titles</title>
   </head>
   <body>
-    
+    <h1>Release the hackin'!</h1>
   </body>
 </html>
